# rhc-playbook-verifier

./: .gitignore  .gitleaks.toml  .packit.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  rhc-playbook-verifier.spec  rhc-playbook-verifier.spec.in  setup.cfg
.github/workflows/: pre-commit.yml  python.yml  regression.yml  test.yml
data/playbooks-unsigned/: invalid-signature.yml
python/rhc_playbook_lib/: __init__.py  _keygen.py  constants.py  crypto.py  serialization.py
python/rhc_playbook_signer/: app.py
python/rhc_playbook_verifier/: __main__.py  app.py
python/tests/: __init__.py
python/tests-integration/: test_signer.py  test_verifier.py
python/tests-unit/: test_crypto.py  test_keygen.py  test_lib.py  test_serializer.py  test_verifier.py
python/tests/integration/: test_signer.py  test_verifier.py
python/tests/unit/: test_crypto.py  test_keygen.py  test_lib.py  test_serializer.py  test_verifier.py
python/tests/unit/integration/: test_signer.py  test_verifier.py
python/tests/unit/lib/: test_clean_playbook.py  test_create_play_digest.py  test_get_revocation_digests.py  test_parse_playbook.py  test_verify_playbook.py
python/tests/unit/serializer/: test_playbook_serializer.py  test_yaml_dumper.py
systemtest/tests/integration/: main.fmf  test.sh
tmt/: main.fmf  package.sh  test.sh
