[metadata]
name = rhc-playbook-verifier
version = 1.0.0
author = CSI Client Tools
author_email = csi-client-tools-bugs@redhat.com
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
license = MIT
license-files = file: LICENSE
description = Verifier for GPG-signed Ansible playbooks
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    Red Hat
    Red Hat Insights
    Ansible
    gnupg

[options]
python_requires = >=3.9
install_requires = pyyaml
include_package_data = True
packages =
    rhc_playbook_lib
    rhc_playbook_verifier
    rhc_playbook_signer
package_dir =
    =python

[options.packages.find]
where = python

[options.entry_points]
console_scripts =
    rhc-playbook-verifier = rhc_playbook_verifier.app:main
    rhc-playbook-signer = rhc_playbook_signer.app:main

[options.extras_require]
dev =
    pytest

# https://mypy.readthedocs.io/en/stable/config_file.html
[mypy]
# "Disallow dynamic typing"
disallow_any_unimported = true

# "Untyped definitions and calls"
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

# "Configuring warnings"
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

# "Miscellaneous strictness flags"
strict_equality = true

# "Configuring error mesages"
pretty = true

# "Advanced options"
warn_incomplete_stub = true

# "Miscellaneous"
warn_unused_configs = true

[coverage:report]
exclude_also =
     # Don't complain about missing debug only code:
    def __repr__
    def __str__
    # Don't complain about abstract methods, they aren't fun:
    @(abc\\.)?abstractmethod
    # Ignore logging setup:
    def _configure_logging

ignore_errors = true
